# Fine

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.sqlmodel_tables.py
backend/app/: main.py
backend/app/agents/: audit_graph.py
backend/app/ai/agents/: __init__.py  base_agent.py  fairness_agent.py  metrics_agent.py  xai_agent.py
backend/app/ai/graph/: advanced_audit_graph.py  audit_graph.py  state.py
backend/app/ai/graph/nodes/: fairness_node.py  metrics_node.py  overfit.py  reasoning_node.py  stress_node.py  xai_node.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  account.py  audit.py  health.py  metrics.py  ready.py  report.py  upload.py
backend/app/core/: auth.py  config.py  logging.py  metrics.py  middleware.py  ratelimit.py  s3.py  s3_cors.py  security_headers.py  tracing.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/audit/: repository.py  schemas.py  service.py
backend/app/services/: advanced_metrics_service.py  dataset_loader.py  diagnose_service.py  fairness_service.py  metrics_service.py  model_loader.py  report_service.py  stress_service.py  xai_service.py
backend/app/storage/: .gitkeep
backend/app/utils/: file_utils.py  validation.py
backend/app/workers/: audit_worker.py  tasks.py
backend/docs/: README.md
backend/migrations/: 001_owner_analysis.sql
backend/scripts/: configure_s3_cors.py
backend/tests/: conftest.py  test_report_download.py  test_services.py
basicmodel/: dataset.csv  logistic_regression.py  model.pkl
frontend/: index.html  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  routes.ts
frontend/src/api/: AuthProvider.tsx  auth.context.ts  client.test.ts  client.ts  schemas.ts  supabaseClient.ts  useAuth.ts
frontend/src/components/: AnalysisChatWidget.tsx  AppShell.tsx  ErrorBoundary.tsx  GlobalNav.tsx  Logo.tsx  ThemeContext.tsx  ToastProvider.tsx  theme.context.ts  toast.context.ts  useTheme.ts  useToast.ts
frontend/src/landing/: CustomCursor.tsx  GrainOverlay.tsx  MagneticButton.tsx  useReveal.ts
frontend/src/landing/sections/: AboutSection.tsx  ContactSection.tsx  FeaturesSection.tsx  (+1 more)
frontend/src/routes/: analyses.tsx  audit.tsx  auth.tsx  dashboard.tsx  landing.tsx  profile.tsx  reset.tsx  status.tsx  upload.tsx
